--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.16.2",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,16 +21,19 @@
     "apexcharts": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "2.5.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@vitejs/plugin-react": "4.3.4",
